fixed overflow bug and jQuery scroll anim

--- a/css/main.css
+++ b/css/main.css
@@ -345,6 +345,7 @@ nav {
   left: 0;
   z-index: -1;
   overflow-x: hidden;
+  height: 95%;
 }
 @media screen and (min-width: 600px) {
   #svg-background {
