--- a/sass/components/_svg-background.scss
+++ b/sass/components/_svg-background.scss
@@ -1,8 +1,3 @@
-#bg-image {
-    // overflow-x: hidden;
-    // position: relative;
-    // overflow: hidden;
-}
 #svg-background {
     position: absolute;
     top: 0;
@@ -12,7 +7,7 @@
     overflow-x: hidden;
     
     // transition: .5s ease;
-    // height: 95%;
+    height: 95%;
     @include media-query ($md) {
         // width: 100%;
         // max-width: 100%;
